Added supporting for numeric name route Added relevant test scripts

--- a/tests/simple.ini
+++ b/tests/simple.ini
@@ -5,9 +5,9 @@ array.1 = 1
 5=5
 array.name = name
 routes.regex.type="regex"
-routes.regex.route="^/ap/(.*)"
-routes.regex.default.controller=Index
-routes.regex.default.action=action
+routes.regex.match="^/ap/(.*)"
+routes.regex.route.controller=Index
+routes.regex.route.action=action
 routes.regex.map.0=name
 routes.regex.map.1=name
 routes.regex.map.2=value
@@ -18,9 +18,9 @@ routes.simple.action=a
 routes.supervar.type="supervar"
 routes.supervar.varname=c
 routes.rewrite.type="rewrite"
-routes.rewrite.route="/ap/:name/:value"
-routes.rewrite.default.controller=Index
-routes.rewrite.default.action=action
+routes.rewrite.match="/ap/:name/:value"
+routes.rewrite.route.controller=Index
+routes.rewrite.route.action=action
 
 [extra : base]
 value = 2
