Fixed one mem leak

--- a/tests/simple.ini
+++ b/tests/simple.ini
@@ -29,3 +29,7 @@ array.name = new_name
 array.2 = test
 
 [product : extra]
+
+[nocatch : extra]
+application.dispatcher.throwException=Off
+application.dispatcher.catchException=yes
