Fixed bug that yaf_config_ini_deep_copy is not much deepy.

--- a/tests/simple.ini
+++ b/tests/simple.ini
@@ -18,7 +18,7 @@ routes.simple.action=a
 routes.supervar.type="supervar"
 routes.supervar.varname=c
 routes.rewrite.type="rewrite"
-routes.rewrite.match="/ap/:name/:value"
+routes.rewrite.match="/yaf/:name/:value"
 routes.rewrite.route.controller=Index
 routes.rewrite.route.action=action
 
@@ -33,3 +33,4 @@ array.2 = test
 [nocatch : extra]
 application.dispatcher.throwException=Off
 application.dispatcher.catchException=yes
+routes.rewrite.match="/yaf/:name/:age"
