change the example

--- a/tests/system.ini
+++ b/tests/system.ini
@@ -8,4 +8,4 @@ application.system.name_separator="__"
 application.system.open_basedir=APPLICATION_PATH
 application.system.use_spl_autoload=0
 application.system.library=APPLICATION_PATH
-application.system.cache_config=1
+application.system.cache_config=Off
